# economy

./: .env.example  .gitignore
backend/: README.md  pyproject.toml
backend/src/economic_api/: main.py
backend/src/economic_api/adapters/inbound/api/: dependencies.py
backend/src/economic_api/adapters/inbound/api/routers/: budget.py  policy.py  simulation.py
backend/src/economic_api/adapters/outbound/persistence/: __init__.py
backend/src/economic_api/application/commands/: __init__.py
backend/src/economic_api/application/dto/: __init__.py
backend/src/economic_api/application/handlers/: __init__.py
backend/src/economic_api/domain/model/aggregates/: __init__.py
backend/src/economic_api/domain/model/value_objects/: __init__.py
backend/src/economic_api/domain/ports/repositories/: __init__.py
backend/src/economic_api/domain/services/: __init__.py  dsge_fiscal_solver.py  dsge_simulation_engine.py
backend/tests/integration/: test_api_contracts.py
docs/: ADR.md  INTELLIGENCE_MATRIX.md  LOVABLE_COMBINED_SPEC.md  PLAN.md  POLICY_PARSER_FUTURE_IMPROVEMENTS.md  connection.md
dsge_latvia/: README.md  requirements.txt
dsge_latvia/docs/: 2023_temp_source.md  appendix_a_mapping_steps.md  appendix_a_raw.txt  appendix_a_transcription.md  appendix_b_raw.txt  appendix_c_raw.txt  audit_checklist.md  determinacy_report.json  dropped_variables.json  equation_trace.md  equations_fiscal.md  equations_nonfiscal.md  irf_results.npz  linear_system_report.json  measurement_equations_summary.md  (+6 more)
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+61 files in other folders)
