[project]
name = "economic-api"
version = "0.1.0"
description = "Economic Simulation API - Latvia DSGE/CGE Political Tool"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Core dependencies
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "openai>=1.30.0",
    "httpx>=0.26.0",

    # For future: Database (commented out for MVP)
    # "asyncpg>=0.29.0",
    # "sqlalchemy[asyncio]>=2.0.25",

    # For future: Event bus (commented out for MVP)
    # "redis>=5.0.0",

    # Utilities
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",  # For testing FastAPI
    "ruff>=0.2.0",    # Linting
    "mypy>=1.8.0",    # Type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
